# lutra-ecs

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: BECS.h  CMakeLists.txt  benchmarks.cpp
include/lutra-ecs/: BitMask.h  ECSManager.h  Entity.h  EntityID.h  EntityIDGenerator.h  Handle.h  HandleFreeList.h  IndexFreeList.h  IterationHelpers.h  SparseSet.h  SparseSet2.h  SparseSetChunked.h  SparseTagSet.h  SparseTagSet2.h  Views.h
tests/: CMakeLists.txt  TBitMask.h  TECS.h  TEntityIDGenerator.h  THandleFreeList.h  TIndexFreeList.h  TSparseSet.h  TSparseSet2.h  TSparseSetChunked.h  TSparseTagSet.h  TSparseTagSet2.h  tests.cpp
